# ProductionCppRoadmap

./: CMakeLists.txt  README.md  main.cpp
labs/: progress.md
labs/fundamentals/: CMakeLists.txt  TrackedObject.cpp  TrackedObject.h  explicit_constructor.cpp  explicit_constructor.h
labs/fundamentals/RaiiWrapperOverResource/: FileHandle.cpp  FileHandle.h
labs/fundamentals/Rule_of_Zero_or_Rule_of_Five/: IntArray.cpp  IntArray.h  ManualIntArray.cpp  ManualIntArray.h
labs/fundamentals/object_ownership/: GameObject.cpp  GameObject.h
labs/fundamentals/tests/: TrackedObject_test.cpp  explicit_constructor_test.cpp
labs/fundamentals/tests/GameObjectTests/: GameObject_tests.cpp
labs/fundamentals/tests/RaiiWrapperOverResourceTests/: FileHandleTests.cpp  file_handle_open_test.txt
labs/fundamentals/tests/Rule_of_Zero_or_Rule_of_Five_tests/: ManualIntArray_tests.cpp  rule_of_zero_tests.cpp
